--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,7 @@
 	  <meta charset= "Utf-8">
 	  <title> My App </title>
 	</head>
-	<body>
-
+	<body> 
 		<ul class="quotes">
 			<% for (var i=0; i < quotes.length; i++){%>
 				<li class="quote">
@@ -20,6 +19,16 @@
 			<input type ="text" placeholder="quote" name="quote">
 			<button type="submit">Submit</button>
 		</form>
+    <div>
+      <h2> Replace last quote written by Master Yoda with a quote written by
+        DarthVader </h2>
+      <button id ="update">Darth Vadar invades! </button>
+    </div>
 	    May Node and Express be with you.
+    <div>
+            <h2>Delete Darth Vader's first quote </h2>
+            <button id ="delete"> Delete first Darth Vadar quote </button>
+    </div>
+      <script src="main.js"></script>
 	</body>
 </html>
